--- a/index.html
+++ b/index.html
@@ -37,6 +37,10 @@
         </div>
       </div>
     </header>
+
+    <main>
+      
+    </main>
     <script src="app.js"></script>
   </body>
 </html>
