--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <div class="desciption">
           <h1>We don't just <br>teach English, <br> we change <br> people's lives!</h1>
           <p>In 9 years, Cambridge has contributed to the change of the lives of more than 50 000 young people</p>
-          <button id="Join">Join To our New Cources</button>
+          <button id="Join">Join To our New Cources📚 </button>
         </div>
         <div class="header-hero-img">
           <div id="fancy-hero-shape"></div>
@@ -39,7 +39,39 @@
     </header>
 
     <main>
-      
+      <div id="advantages-sec">
+        <h2 id="title">Advantages Of Our Education</h2>
+        <div id="advantage-container">
+          <div id="adv-content">
+            <img src="assets/main/advnatges-imgs/pro-teachers.png" alt="">
+            <div id="adv-description">
+              <h2></h2>
+              <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Mollitia ipsam temporibus quia harum vel odit eos adipisci vero nam architecto.</p>
+            </div>
+          </div>
+          <div id="adv-content">
+            <img src="assets/main/advnatges-imgs/co-working.png" alt="">
+            <div id="adv-description">
+              <h2></h2>
+              <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Mollitia ipsam temporibus quia harum vel odit eos adipisci vero nam architecto.</p>
+            </div>
+          </div>
+          <div id="adv-content">
+            <img src="assets/main/advnatges-imgs/uniq-curc.png" alt="">
+            <div id="adv-description">
+              <h2></h2>
+              <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Mollitia ipsam temporibus quia harum vel odit eos adipisci vero nam architecto.</p>
+            </div>
+          </div>
+          <div id="adv-content">
+            <img src="assets/main/advnatges-imgs/academic-support.png" alt="">
+            <div id="adv-description">
+              <h2></h2>
+              <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Mollitia ipsam temporibus quia harum vel odit eos adipisci vero nam architecto.</p>
+            </div>
+          </div>
+        </div>
+      </div>
     </main>
     <script src="app.js"></script>
   </body>
