just littli work

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <div class="desciption">
           <h1>We don't just <br>teach English, <br> we change <br> people's lives!</h1>
           <p>In 9 years, Cambridge has contributed to the change of the lives of more than 50 000 young people</p>
-          <button>Join To our New Cources</button>
+          <button id="Join">Join To our New Cources</button>
         </div>
         <div class="header-hero-img">
           <div id="fancy-hero-shape"></div>
