add remake header- part

--- a/index.html
+++ b/index.html
@@ -3,73 +3,50 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="node_modules/boxicons/css/boxicons.min.css">
+    <link rel="stylesheet" href="node_modules/boxicons/css/boxicons.min.css" />
     <link rel="icon" href="assets/favicons/favicon.png" />
     <link rel="stylesheet" href="styles.css" />
     <title>Bob SCHOOL</title>
   </head>
   <body>
     <nav>
-        <img
-          src="assets/logo-image/nav-logo.png"
-          alt="nav-logo"
-          id="logo"
-          width="180"
-        />
-        <ul id="nav-res">
-          <li><a href="#">Teachers</a></li>
-          <li><a href="#">Cources</a></li>
-          <li><a href="#">Branches</a></li>
-          <li><a href="#">Contact US</a></li>
-        </ul>
-        <button id="menu">Menu</button>
-
+      <img
+        src="assets/logo-image/nav-logo.png"
+        alt="nav-logo"
+        id="logo"
+        width="180"
+      />
+      <ul id="nav-res">
+        <li><a href="#">Teachers</a></li>
+        <li><a href="#">Cources</a></li>
+        <li><a href="#">Branches</a></li>
+        <li><a href="#">Contact US</a></li>
+      </ul>
+      <button id="menu">Menu</button>
     </nav>
     <header>
-      <div class="header-conts">
-        <div class="desciption">
-          <h1>We don't just <br>teach English, <br> we change <br> people's lives!</h1>
-          <p>In 9 years, Cambridge has contributed to the change of the lives of more than 50 000 young people</p>
-          <button id="Join">Join To our New Cources📚 </button>
-        </div>
-        <div class="header-hero-img">
-          <div id="fancy-hero-shape"></div>
+      <div class="description">
+        <h1>
+          Unlock success with <br />
+          <span id="main-txt-h1">Expert English</span> <br />language training.
+        </h1>
+        <p>
+          In 8 years, we've empowered more than <br />
+          30,000 individuals through English education.
+        </p>
+        <button>Learn more</button>
+      </div>
+      <div id="hero">
+        <div id="fancy-hero-shape">
+          <img src="assets/header-bg-img/header-hero-img/hero-img.png" alt="" />
         </div>
       </div>
     </header>
-
     <main>
-      <div id="advantages-sec">
-        <h2 id="title">Advantages Of Our Education</h2>
-        <div id="advantage-container">
-          <div id="adv-content">
-            <img src="assets/main/advnatges-imgs/pro-teachers.png" alt="">
-            <div id="adv-description">
-              <h2></h2>
-              <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Mollitia ipsam temporibus quia harum vel odit eos adipisci vero nam architecto.</p>
-            </div>
-          </div>
-          <div id="adv-content">
-            <img src="assets/main/advnatges-imgs/co-working.png" alt="">
-            <div id="adv-description">
-              <h2></h2>
-              <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Mollitia ipsam temporibus quia harum vel odit eos adipisci vero nam architecto.</p>
-            </div>
-          </div>
-          <div id="adv-content">
-            <img src="assets/main/advnatges-imgs/uniq-curc.png" alt="">
-            <div id="adv-description">
-              <h2></h2>
-              <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Mollitia ipsam temporibus quia harum vel odit eos adipisci vero nam architecto.</p>
-            </div>
-          </div>
-          <div id="adv-content">
-            <img src="assets/main/advnatges-imgs/academic-support.png" alt="">
-            <div id="adv-description">
-              <h2></h2>
-              <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Mollitia ipsam temporibus quia harum vel odit eos adipisci vero nam architecto.</p>
-            </div>
-          </div>
+      <div id="advantages-part">
+        <h2>What Kind Of Advantages we have?</h2>
+        <div id="advanteges-container">
+          
         </div>
       </div>
     </main>
