i add contact part

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <li><a href="#">Teachers</a></li>
         <li><a href="#">Cources</a></li>
         <li><a href="#">Branches</a></li>
-        <li><a href="#">Contact US</a></li>
+        <li><a href="#contact">Contact US</a></li>
       </ul>
       <button id="menu">Menu</button>
     </nav>
@@ -96,7 +96,7 @@
           </div>
         </div>
       </div>
-      <div id="teachers-part">
+      <!-- <div id="teachers-part">
         <h2 id="title">Our Teachers</h2>
         <div id="container-of-tr">
           <div id="teachers">
@@ -106,8 +106,20 @@
             <a href="#">Social Media Networks</a>
           </div>
         </div>
+      </div> -->
+
+      <div id="contact">
+        <div class="info">
+          <h1>
+            Want to learn English? Welcome to Cambridge LC!
+          </h1>
+        </div>
+        <form action="">
+          <label for=""></label>
+        </form>
       </div>
     </main>
+
     <script src="app.js"></script>
   </body>
 </html>
