--- a/index.html
+++ b/index.html
@@ -68,6 +68,38 @@
       </div>
       <div id="cources">
         <h2 id="title">Our Cources</h2>
+        <div class="cource-container">
+          <div id="cource">
+            <div id="level-cource">
+              <h2>A1</h2>
+            </div>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa, ipsa incidunt, nostrum dolor sequi consequuntur ut autem ex iure fugiat quo quisquam, atque tempore.</p>
+          </div>
+          <div id="cource">
+            <div id="level-cource">
+              <h2>A2</h2>
+            </div>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa, ipsa incidunt, nostrum dolor sequi consequuntur ut autem ex iure fugiat quo quisquam, atque tempore.</p>
+          </div>
+          <div id="cource">
+            <div id="level-cource">
+              <h2>B1</h2>
+            </div>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa, ipsa incidunt, nostrum dolor sequi consequuntur ut autem ex iure fugiat quo quisquam, atque tempore.</p>
+          </div>
+          <div id="cource">
+            <div id="level-cource">
+              <h2>B2</h2>
+            </div>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa, ipsa incidunt, nostrum dolor sequi consequuntur ut autem ex iure fugiat quo quisquam, atque tempore.</p>
+          </div>
+          <div id="cource">
+            <div id="level-cource">
+              <h2>Ielts</h2>
+            </div>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa, ipsa incidunt, nostrum dolor sequi consequuntur ut autem ex iure fugiat quo quisquam, atque tempore.</p>
+          </div>
+        </div>
         
       </div>
       <div id="contact">
